--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,11 @@ body {
   height: 100%;
   overflow: hidden;
 }
-#root{
+
+#root {
   height: 100%;
 }
+
 .App {
   display: flex;
   flex-direction: column;
@@ -25,7 +27,13 @@ body {
 * {
   font-family: 'XP Tahoma';
 }
-div,p,button,span,textarea,input{
+
+div,
+p,
+button,
+span,
+textarea,
+input {
   font-size: 20px;
 }
 
@@ -81,12 +89,14 @@ div,p,button,span,textarea,input{
   background-color: royalblue;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
+  width: 640px;
+  height: 520px;
 }
 
 .window-header {
   color: white;
   cursor: move;
-  display: flex !important; 
+  display: flex !important;
   flex-direction: row;
 
   .window-name {
@@ -136,141 +146,180 @@ div,p,button,span,textarea,input{
   background-color: royalblue;
   width: 100%;
   height: 30px;
+}
 
-  .taskbar-start-menu {
-    .taskbar-start {
-      height: 30px;
-      width: 90px;
-    }
-
-    .taskbar-menu {
-      display: none;
-      position: absolute;
-      bottom: 100%;
-      left: 0;
-      background-color: royalblue;
-
-      .taskbar-menu-user {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        padding: 5px;
-
-        .taskbar-menu-user-icon {
-          border: 3px solid white;
-          height: 48px;
-          width: 48px;
-        }
-
-        .taskbar-menu-user-name {
-          color: white;
-          margin: 5px;
-        }
-      }
-
-      .taskbar-menu-list {
-        overflow-y: auto;
-        background-color: white;
-        margin: 2px;
-        padding: 2px;
-
-        .taskbar-menu-item {
-          display: flex;
-          flex-direction: row;
-          gap: 5px;
-          padding: 10px;
-
-          .taskbar-menu-item-label {
-            margin: 0;
-          }
-
-          .taskbar-menu-item-icon {
-            width: 30px;
-            height: 30px;
-          }
-        }
-
-        .taskbar-menu-item:hover {
-          background-color: lightgray;
-        }
-
-        .taskbar-all-programs {
-          .taskbar-all-programs-list {
-            display: none;
-            position: absolute;
-            left: 100%;
-            margin-left: -3px;
-            padding: 2px;
-            bottom: 0;
-            background-color: white;
-            border: 2px solid royalblue;
-          }
-        }
-
-        .taskbar-all-programs:hover {
-          .taskbar-all-programs-list {
-            display: block;
-          }
-        }
-      }
-    }
-  }
-
-  .taskbar-start-menu:hover {
-    .taskbar-menu {
-      display: block;
-    }
-  }
-
-
-  .taskbar-window-list {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: row;
-    overflow-x: auto;
-
-    .taskbar-window {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      gap: 5px;
-      color: white;
-      background-color: royalblue;
-
-      .taskbar-window-icon {
-        width: 17px;
-        height: 17px;
-      }
-    }
-  }
-
-  .taskbar-clock{
-    color: white;
-    background-color: dodgerblue;
-    padding-inline: 20px;
-    display: flex;
-    align-items: center;
+.taskbar-start-menu {
+  .taskbar-start {
+    height: 30px;
+    width: 90px;
   }
 }
 
-.contact-main{
-  display:flex;
-  flex-direction:row;
+.taskbar-menu {
+  display: none;
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  background-color: royalblue;
+
+  .taskbar-menu-user {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 5px;
+
+    .taskbar-menu-user-icon {
+      border: 3px solid white;
+      height: 48px;
+      width: 48px;
+    }
+
+    .taskbar-menu-user-name {
+      color: white;
+      margin: 5px;
+    }
+  }
+}
+
+.taskbar-menu-list {
+  overflow-y: auto;
+  background-color: white;
+  margin: 2px;
+  padding: 2px;
+}
+
+.taskbar-menu-item {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+  padding: 10px;
+}
+
+.taskbar-menu-item-label {
+  margin: 0;
+}
+
+.taskbar-menu-item-icon {
+  width: 30px;
+  height: 30px;
+}
+
+.taskbar-menu-item:hover {
+  background-color: lightgray;
+}
+
+.taskbar-all-programs {
+  padding-left: 10px;
+
+  .taskbar-all-programs-list {
+    display: none;
+    position: absolute;
+    left: 100%;
+    margin-left: -3px;
+    padding: 2px;
+    bottom: 0;
+    background-color: white;
+    border: 2px solid royalblue;
+  }
+}
+
+.taskbar-all-programs:hover {
+  .taskbar-all-programs-list {
+    display: block;
+  }
+}
+
+.taskbar-start-menu:hover {
+  .taskbar-menu {
+    display: block;
+  }
+}
+
+
+.taskbar-window-list {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: row;
+  overflow-x: auto;
+
+  .taskbar-window {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 5px;
+    color: white;
+    background-color: royalblue;
+
+    .taskbar-window-icon {
+      width: 17px;
+      height: 17px;
+    }
+  }
+}
+
+.taskbar-clock {
+  color: white;
+  background-color: dodgerblue;
+  padding-inline: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.contact-main {
+  display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   gap: 20px;
 }
-.contact-info-container{
+
+.contact-info-container {
   flex: 1;
-  max-width:fit-content;
+  max-width: fit-content;
 }
-.contact-form-container{
+
+.contact-form-container {
   flex: 1;
-  min-width:150px;
-  max-width:500px;
+  min-width: 150px;
+  max-width: 500px;
 }
-.contact-form{
-  width:auto;
-  display:flex;
-  flex-direction:column;
-  gap:5px;
+
+.contact-form {
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+
+
+@media all and (max-width: 768px) {
+  .window {
+    width: 320px;
+    height: 260px;
+  }
+
+  h2 {
+    font-size: 25px;
+  }
+}
+
+@media all and (max-height: 454px) {
+  .taskbar-menu-item {
+    padding-block: 3px;
+  }
+
+  .taskbar-menu-item-icon {
+    width: 20px;
+    height: 20px;
+  }
+
+  .taskbar-menu-line {
+    margin: 0;
+  }
+
+  .taskbar-all-programs {
+    h2 {
+      margin: 3px;
+    }
+  }
 }
